2011-03-30 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php, include/graphs/*, include/graphs/fgraph.php:
	added first version of common graph libraries with Integria and Babel.

2011-03-30 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Fixed get_agentmodule_sla_array and
	added functionality to show the table, table+graph or only graph
	* include/pchart_graph.php: Fixed function graph_sla_horizontal
	* include/pandora_graph.php: Changed function graph_sla_horizontal
	prototype
	* include/fgraph.php: Deleted function graph_sla_pie, fixed function
	graph_sla_horizontal and added two more cases for printing graphs
	* godmode/reporting/reporting_builder.php: Changed getting parameter
	of two checkboxes for two comboboxes
	* godmode/reporting/reporting_builder.item_editor.php: Added the options
	for the combo to select display table, table+graph or only graph


2011-03-29 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/stat_win.php, godmode/servers/plugin.php: cleaned source
	code style.

2011-03-29  Raul Mateos <raulofpandora@gmail.com>

	* pandora_console_upgrade: Use PI_VERSION variable.
	
	* pandora_console_install: Changed small text.

2011-03-28 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php,
	godmode/reporting/reporting_builder.item_editor.php: added suppor for styles
	in the report content, now support in columns and landscape in some cases.

2011-03-28  Sergio Martin <sergio.martin@artica.es>

	* include/fonts/FreeSans.ttf
	include/FreeSans.ttf
	include/functions_config.php Moved the freesans 
	font to the new fonts folder and set the unicode 
	font as default font into setup

2011-03-28  Sergio Martin <sergio.martin@artica.es>

	* include/fonts
	include/fonts/DejaVuSerif-Bold.ttf
	include/fonts/DejaVuSerif.ttf
	include/fonts/DejaVuSerifCondensed-Bold.ttf
	include/fonts/DejaVuSerifCondensed.ttf
	include/fonts/DejaVuSerif-Italic.ttf
	include/fonts/code.ttf